Revert "TR-2544 fix compare cards alignment"
This reverts commit 546e90e68816d6dfdcf71d0d83eb23e34a793515.

--- a/modules/dxp/apps/osb/osb-testray/osb-testray-theme/src/css/partials/_compare_runs.scss
+++ b/modules/dxp/apps/osb/osb-testray/osb-testray-theme/src/css/partials/_compare_runs.scss
@@ -138,7 +138,7 @@
 }
 
 table.comparison-results {
-	display: inline-table;
+	float: left;
 	margin-bottom: 30px;
 	margin-right: 50px;
 	max-width: 400px;
